# Notes-with-AI

./: CMakeLists.txt  NoteApp.hpp  README.md  main.cpp  noteapp.cpp
